--- a/opensrp-path/src/main/res/values/strings.xml
+++ b/opensrp-path/src/main/res/values/strings.xml
@@ -218,4 +218,9 @@
     <string name="validation_error">Validation Error</string>
 
     <string name="show_vaccine_card_disabled">Showing the vaccine card has been disabled for an out of area child.</string>
+
+    <string name="delete_maps_dialog_title">"Do you want to delete downloaded maps?"</string>
+    <string name="delete_maps_dialog_message">This will make the maps inaccessible when offline.</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
